[package]
name = "remote_signer"
version = "0.1.0"
authors = ["Herman Junge <hermanjunge@protonmail.com>"]
edition = "2018"

[dev-dependencies]
client = { git = "https://github.com/sigp/rust-bls-remote-signer", rev = "ed96121b2d7c09dc4c68d8a38c6667f8295ab590" }
serde_derive = "1.0.116"
server_helpers = { git = "https://github.com/sigp/rust-bls-remote-signer", rev = "ed96121b2d7c09dc4c68d8a38c6667f8295ab590", package = "helpers" }
tree_hash = "0.1.1"
tree_hash_derive = "0.2.0"

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tokio = { version = "0.2.22", features = ["time"] }
types = { path = "../../consensus/types" }
