[package]
name = "remote_signer_test"
version = "0.1.0"
authors = ["Herman Junge <herman@sigmaprime.io>"]
edition = "2018"

[dependencies]
remote_signer = { path = "../../common/remote_signer" }
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
server_helpers = { git = "https://github.com/sigp/rust-bls-remote-signer", rev = "ed96121b2d7c09dc4c68d8a38c6667f8295ab590", package = "helpers" }
tokio = { version = "0.2.22", features = ["time"] }
tree_hash = "0.1.1"
types = { path = "../../consensus/types" }
